syntax = "proto3";
package dron_poc;

import "google/protobuf/timestamp.proto";

option go_package = "dron-proto/";

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_RUNNING = 2;
  STATUS_SUCCESS = 3;
  STATUS_FAILURE = 4;
}

message TaskId {
  int32 value = 1;
}

message WorkerID {
  int32 value = 1;
}

message Command {
  string value = 1;
}

message Address {
  string value = 1;
}

message Task {
  TaskId id = 1;
  string name = 2;
  Command command = 3;
  Status status = 4;
  TaskId assigned_to = 5;
  google.protobuf.Timestamp submitted_at = 6;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp completed_at = 7;
}

// To Coordinator
message CreateTaskRequest {
  string name = 1;
  string command = 2;
}

// From Coordinator
message CreateTaskResponse {
  TaskId id = 1;
  bool success = 2;
  string message = 3;
}

// Worker to Coordinator
message RegisterWorkerRequest {
  string name = 1;
  Address address = 2;
}

// Coordinator to Worker
message RegisterWorkerResponse {
  WorkerID id = 1;
  bool success = 2;
  string message = 3;
}

message RequestTask {
  WorkerID id = 1;
}

service WorkerService {}
